--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,93 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  font-family: arial, sans-serif;
   margin: 0;
+}
+
+body,
+body > div {
+  height: 100vh;
+  width: 100vw;
+}
+
+#container {
+  height: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  color: black;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#container > div {
+  display: flex;
+  color: black;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#navbar {
+  padding: 2em;
+  justify-content: space-evenly;
+  font-size: xx-large;
+  border: 3px solid black;
+  color:gold;
+  background-color: aqua;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* Target the Link components inside the #navbar element and set the font color to red */
+#navbar a {
+  color: rgb(255, 255, 255);
+  text-decoration: none; /* To remove the default underline on links */
 }
+
+/* Apply a hover effect if desired */
+#navbar a:hover {
+  color: rgb(0, 0, 0);
+}
+
+a:hover :nth-child(2) {
+  background-color: red;
+}
+
+/* index.css */
+
+/* Target the #navbar element */
+#navbar {
+  display: flex;
+  justify-content: space-around;
+  background-color: lightgray;
+  padding: 10px;
+}
+
+/* Target the Link components inside the #navbar element */
+#navbar a {
+  text-decoration: none; /* To remove the default underline on links */
+  padding: 5px; /* Adding padding to make the links look nicer */
+}
+
+/* Apply a different hover color for the red link */
+#navbar .red-link:hover {
+  color: darkred;
+}
+
+/* Apply a different hover color for the blue link */
+#navbar .blue-link:hover {
+  color: darkblue;
+}
+
+/* Apply a different hover color for the yellow link */
+#navbar .yellow-link:hover {
+  color: goldenrod;
+}
+
+
+
+#main-section {
+  flex-grow: 1;
+
+}
+
+#main-section > div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
