--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 
 * {
   font-family: arial, sans-serif;
-  margin: 0;
+  margin: 5px;
 }
 
 body,
 body > div {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
 
 }
 /* 
@@ -48,13 +48,13 @@ body > div {
 
 
 #main-section {
-  flex-grow: 1;
+  /* flex-grow: 1; */
 
 }
 
 #main-section > div {
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   /* justify-content: center; */
 }
 
@@ -71,6 +71,22 @@ body > div {
 
 .buttons:hover {
   background-color: #381465;
+  cursor:pointer;
+}
+
+.details:hover {
+  background-color: #381465;
+  
+}
+
+.details {
+  background-color: aqua;
+  color:brown;
+  border: 2px solid black;
+  padding: 10px;
+  font-size: large;
+  text-decoration: none;
+  cursor:pointer;
 }
 
 .homebuttons {
@@ -89,17 +105,17 @@ body > div {
 
 .images {
 display: grid;
-height: 300px;
+height: 340px;
 background-color: blueviolet;
 align-items: center;
-border-radius: 15px;
-
+padding: 0px;
+border: 2px solid black;
 }
 
 .name {
   display: grid;
   border: 3px solid black;
-  grid-template-rows: 3;
+  /* grid-template-rows: 3; */
   background-color: aqua;
   border-radius: 15px;
 }
@@ -109,13 +125,26 @@ border-radius: 15px;
   border: 5px solid black;
   border-radius: 15px;
   background: #73AD21;
-  padding: 20px;
-  padding: 10px;
-    /* grid-template-columns: repeat(2, 100px); */
-  column-gap: 20px;
+  /* padding: 20px;
+  padding: 10px; */
+  /* grid-gap: 50px; */
+    /* grid-template-columns: repeat(4); */
+  /* column-gap: 30px;
   row-gap: 10px;
+  grid-gap: 10px 20px; */
   /* justify-items: center; */
   /* justify-content: space-evenly; */
   
 }
 
+
+.playerdet {
+  /* display: grid; */
+  font-size: x-large;
+  border: 5px solid black;
+  border-radius: 15px;
+  background: #73AD21;
+padding: 50px;
+
+
+}
